Fixed: Always visited scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: scroll;
+}
+
 #title {
     font-family: 'Roboto', sans-serif;
     padding-top: 30px;
